# tUR

./: .gitignore  .gitmodules  README.md
Code/HAB/Bekki/: Bekki.ino
Code/HAB/Snapshot/: Snapshot.ino
Code/HASP/: pressure_test.cpp
Code/HASP/Ambient_Inubator/: Ambient_Inubator.ino
Code/HASP/GOAT/: GOAT.ino
Code/HASP/GOAT_MASTER/: GOAT_MASTER.ino
Code/HASP/GOAT_SLAVE/: GOAT_SLAVE.ino
Code/HASP/HASP_Simulator/: HASP_Simulator.ino
Code/HASP/HBridge_test/: HBridge_test.ino
Code/HASP/SO2_test_rig/: SO2_test_rig.ino
Code/HASP/Simple_Thermometers/: Simple_Thermometers.ino
Code/HASP/SpecTest/: SpecTest.ino
Code/HASP/Spoof/: Spoof.ino
Code/HASP/Spoof_GOAT/: Spoof_GOAT.ino
Code/HASP/endurance_test/: endurance_test.ino
Code/HASP/endurance_test_ambient/: endurance_test_ambient.ino
Code/HASP/power_test/: power_test.ino
Code/HASP2/: BusyBoxPrototype.ino
Code/Scripts/: bluetooth_read.lua
Data/: RAMCombiner.lua  combiner.lua  combiner2.lua  grapher.lua
Data/FortSumner-2018/: Integrationnetwork.csv
Data/HASP TV/: .combiner.lua.swp  combined.out  combiner.lua
Data/RAM Templates/: bbox.csv  motion.csv  network.csv
Dependencies/lua-5.3.4/: lua-5.3.4-shared-library-1.patch
Dependencies/package_configs/: liblua.pc  libwiringpi.pc
ROS/devel/: .catkin  .rosinstall  setup.sh
ROSCode/OBSERVATION/: .gitignore
ROSCode/RAM/: .gitignore
ROSCode/RAM/src/arm_controller/: CMakeLists.txt  package.xml
ROSCode/RAM/src/arm_controller/include/arm_controller/: ArmState.h  GoState.h  GoSynchronizedState.h  OffState.h  PauseState.h  WaitingState.h  arm_controller.h  arm_machine.h  forward_kinematics_test.cpp  inverse_kinematics_test.cpp  kinematics.h  shared_types.h
ROSCode/RAM/src/arm_controller/src/: ArmState.cpp  GoState.cpp  GoSynchronizedState.cpp  OffState.cpp  PauseState.cpp  WaitingState.cpp  arm_controller.cpp  arm_controller.h  kinematics.cpp
ROSCode/RAM/src/logic_controller/: CMakeLists.txt  package.xml
ROSCode/RAM/src/logic_controller/include/logic_controller/: LoadingState.h  LogicState.h  ManualState.h  PerformState.h  VerifyState.h  WaitingState.h  action.h  logic_controller.h  shared_types.h  trial.h
ROSCode/RAM/src/logic_controller/scripts/: trial1.lua  types.lua
ROSCode/RAM/src/logic_controller/src/: LoadingState.cpp  LogicState.cpp  ManualState.cpp  PerformState.cpp  VerifyState.cpp  WaitingState.cpp  action.cpp  logic_controller.cpp  trial.cpp
SolidWorks/D-H Master Folder 2017-12-22/: Side Hatches.SLDPRT  _25 Hex 18-8 STAINLESS STL NYLON-INSERT LOCKNUT.SLDPRT  _25 SS FLAT WASHER.SLDPRT  _25 x .875  18-8 STAINLESS STEEL SOCKET HEAD CAP SCREW.SLDPRT
SolidWorks/Gripper Assembly/: Gripper Base Cap Fixed.STL  Gripper Base.STL  Left Jaw.STL  Servo Bracket A.STL  Servo and CV Bracket.STL
(+638 files in other folders)
